--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:xenial
 
 RUN apt-get update -qq && apt-get install -qqy openssh-server curl vim man
 RUN mkdir /var/run/sshd
-RUN echo 'root:pass' | chpasswd
+COPY ssh.password /ssh.password
+RUN echo "root:$(cat /ssh.password)" | chpasswd && rm /ssh.password
 RUN sed -i 's/PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 
 # SSH login fix. Otherwise user is kicked off after login
