switch to  a nodejs web app
Emphasizes the python script plugin usage if the web app is a different
language

--- a/loadbalancer/haproxy.cfg
+++ b/loadbalancer/haproxy.cfg
@@ -16,5 +16,5 @@ backend web
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-    server web_1 web_1:8080 check
-    server web_2 web_2:8080 check
+    server web_1 rundeck-custom-plugin-example_web_1:8080 check
+    server web_2 rundeck-custom-plugin-example_web_2:8080 check
