--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,7 @@ services:
         - db-data:/var/lib/postgresql/data
 
   # middle tier
-  web_1:
-    build: web
-    image: rd-example-web
-  web_2:
+  web:
     build: web
     image: rd-example-web
 
