Don't crash haproxy if cant resolve dns of downstream servers

--- a/loadbalancer/haproxy.cfg
+++ b/loadbalancer/haproxy.cfg
@@ -2,6 +2,7 @@ defaults
     timeout connect 500
     timeout client  5000
     timeout server  5000
+    default-server init-addr last,libc,none
 
 frontend http
     bind *:80
@@ -18,3 +19,4 @@ backend web
     option httpchk HEAD / HTTP/1.1\r\nHost:localhost
     server web_1 rundeck-custom-plugin-example_web_1:8080 check
     server web_2 rundeck-custom-plugin-example_web_2:8080 check
+    
