Revert "switch to  a nodejs web app"
This reverts commit 2e27ae694b42b00ba2f637386ba82ef17e437f9c.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,10 @@ services:
         - db-data:/var/lib/postgresql/data
 
   # middle tier
-  web:
+  web_1:
+    build: web
+    image: rd-example-web
+  web_2:
     build: web
     image: rd-example-web
 
