--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,9 +1,10 @@
 FROM rd-example-ssh
 
-RUN apt-get update -qq && apt-get install -qqy python3 postgresql-client python-psycopg2
-
-COPY web.py /usr/bin
-RUN chmod 755 /usr/bin/web.py
+RUN apt-get update -qq && apt-get install -qqy python3 postgresql-client python3-pip
+RUN pip3 install pyyaml
+COPY web.py /usr/share/
+COPY web.yaml /etc/
+RUN chmod 644 /etc/web.yaml
 ENV APP_PORT 8080
 EXPOSE 8080
 
