--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,10 @@ services:
         - db-data:/var/lib/postgresql/data
 
   # middle tier
-  web_1:
+  web:
     build: web
     image: rd-example-web
-  web_2:
-    build: web
-    image: rd-example-web
-
+  
   # "public" services
   bastion:
     build: ssh
