--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM rd-example-ssh
 
 RUN apt-get update -qq && apt-get install -qqy python3 postgresql-client python3-pip
-RUN pip3 install pyyaml
+RUN pip3 install pyyaml pyaml
 COPY web.py /usr/share/
 COPY web.yaml /etc/
 RUN chmod 644 /etc/web.yaml
