--- a/rundeck-project/project.properties
+++ b/rundeck-project/project.properties
@@ -1,4 +1,4 @@
 resources.source.1.config.file=/home/rundeck/nodes.yaml
 resources.source.1.config.generateFileAutomatically=false
-resources.source.1.config.includeServerNode=false
+resources.source.1.config.includeServerNode=true
 resources.source.1.type=file
