--- a/rundeck/nodes.yaml
+++ b/rundeck/nodes.yaml
@@ -1,12 +1,12 @@
 web_1:
-  hostname: rundeck-custom-plugin-example_web_1
+  hostname: web_1
   username: root
   tags: web
   ssh-authentication: password
   ssh-password-storage-path: "keys/projects/${job.project}/nodes/${node.name}/ssh.password"
 
 web_2:
-  hostname: rundeck-custom-plugin-example_web_2
+  hostname: web_2
   username: root
   tags: web
   ssh-authentication: password
