--- a/rundeck-project/change_password.yaml
+++ b/rundeck-project/change_password.yaml
@@ -1,6 +1,7 @@
 - defaultTab: summary
   description: ''
   executionEnabled: true
+  id: 542f5584-6568-424f-bbbe-36ba783ccc8c
   loglevel: INFO
   name: change_password
   nodeFilterEditable: false
@@ -13,13 +14,18 @@
       threadcount: '1'
     filter: web_.*
   nodesSelectedByDefault: true
+  options:
+  - label: Database user
+    name: dbuser
+    required: true
   scheduleEnabled: true
   sequence:
     commands:
     - nodeStep: true
       configuration:
-        new_password: keys/projects/hello-project/db/password
-        new_user: keys/projects/hello-project/db/user
-      type: ChangePassword
+        user: ${option.dbuser}
+        password: keys/projects/hello-project/db/${option.dbuser}
+      type: UpdateDBCredentials
     keepgoing: false
     strategy: node-first
+  uuid: 542f5584-6568-424f-bbbe-36ba783ccc8c
