--- a/rundeck/Dockerfile
+++ b/rundeck/Dockerfile
@@ -1,3 +1,4 @@
 FROM rundeck/rundeck:SNAPSHOT
 
 COPY --chown=rundeck:rundeck nodes.yaml /home/rundeck/
+COPY --chown=rundeck:rundeck db-creds-plugin.zip /home/rundeck/libext/
