write up hello world tutorial and part of db cred
* Fix docker cp/exec permission error
* Switch to public key ssh auth
* Generalize key storage upload
* Split up helloworld plugin from db-credentials plugin
* Generalize plugin zipping to anything in the rundeck-plugins dir

--- a/rundeck-project/project.properties
+++ b/rundeck-project/project.properties
@@ -1,3 +1,5 @@
+project.ssh.user=root
+project.ssh-keypath=/home/rundeck/.ssh/rundeck-playground
 resources.source.1.config.file=/home/rundeck/nodes.yaml
 resources.source.1.config.generateFileAutomatically=false
 resources.source.1.config.includeServerNode=true
