--- a/rundeck-project/hello_test_job.yaml
+++ b/rundeck-project/hello_test_job.yaml
@@ -1,23 +1,10 @@
-- defaultTab: summary
+- name: Hello Test Job
   description: 'A job to test our hello world plugin'
-  executionEnabled: true
-  id: d6a1284a-7905-4835-b4b8-844c06670194
-  loglevel: INFO
-  name: Hello Test Job
-  nodeFilterEditable: false
   nodefilters:
-    dispatch:
-      excludePrecedence: true
-      keepgoing: false
-      rankOrder: ascending
-      successOnEmptyNodeFilter: false
-      threadcount: '1'
     filter: web_.*
-  scheduleEnabled: true
   sequence:
     commands:
     - nodeStep: true
       type: HelloBash
-    keepgoing: false
-    strategy: node-first
-  uuid: d6a1284a-7905-4835-b4b8-844c06670194
+      configuration:
+        secret_secret: keys/projects/hello-project/mysecret
