Finish up credential rotation guide
* Actually connect to the db from the web app
* Clean up job naming
* Speed up bootstrapping by using more prebuilt Docker images

--- a/rundeck-cli/Dockerfile
+++ b/rundeck-cli/Dockerfile
@@ -1,5 +1,4 @@
-FROM ubuntu:xenial
-RUN apt-get update -qq && apt-get install -qqy curl openjdk-9-jre-headless
+FROM openjdk:8-jre
 RUN curl -sL https://github.com/rundeck/rundeck-cli/releases/download/v1.1.0-alpha/rundeck-cli_1.1.0.SNAPSHOT-1_all.deb > /rundeck-cli.deb
 RUN dpkg -i /rundeck-cli.deb && rm /rundeck-cli.deb
 ENV RD_URL http://rundeck:4440
