--- a/rundeck-project/jobs/HelloWorld.yaml
+++ b/rundeck-project/jobs/HelloWorld.yaml
@@ -1,4 +1,4 @@
-- name: Hello Test Job
+- name: HelloWorld
   description: 'A job to test our hello world plugin'
   nodefilters:
     filter: web_.*
