fix duplicate key

--- a/rundeck-project/jobs/RotateDbCredentials.yaml
+++ b/rundeck-project/jobs/RotateDbCredentials.yaml
@@ -24,7 +24,7 @@
         args: -dbuser web${option.web_user_version}
     - jobref:
         name: RestartApp
-        name: RestartApp
+        uuid: RestartApp
         nodeStep: 'true'
     - jobref:
         name: DeleteDbUser
