use fake-s3 server so we can check in fake aws credentials

--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -2,10 +2,13 @@
 FROM playground-ssh
 
 # Install aws cli
-RUN pip install awscli
+RUN pip install awscli awscli-plugin-endpoint && mkdir /root/.aws
 
 # Install FPM.
 RUN apt-get update -q && apt-get install -yy ruby-dev && gem install fpm
+
+# Point to our fakes3 endpoint
+COPY aws.ini /root/.aws/config
 
 # Define working directory.
 WORKDIR /data
