--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,14 @@ services:
     volumes:
       - rundeck-data:/home/rundeck/server/data
 
+  # packager host
   fpm:
     build: fpm
     image: playground-fpm
+
+  # fake s3 api
+  fakes3:
+    image: lphoward/fake-s3
 
 volumes:
   rundeck-data:
