--- a/rundeck-project/jobs/PackageDeb.yaml
+++ b/rundeck-project/jobs/PackageDeb.yaml
@@ -16,6 +16,12 @@
           bgcolor: yellow
           mode: bold
           regex: ^INFO\s*-\s*(.*)$
+      - type: quiet-output
+        config:
+          loglevel: debug
+          matchLoglevel: all
+          quietMatch: 'true'
+          regex: AWS_SECRET_ACCESS_KEY
     commands:
     - type: BuildDeb
       nodeStep: true
