--- a/rundeck-plugins/db-creds/plugin.yaml
+++ b/rundeck-plugins/db-creds/plugin.yaml
@@ -1,8 +1,8 @@
-name: Database credential management
-version: 1
+name: db creds
+version: 3
 rundeckPluginVersion: 1.2
 author: Carlo Cabanilla
-date: 2018-07-20
+date: 2018-07-20T00:00:00Z
 url: http://rundeck.org/
 providers:
   - name: RestartApp
