Group jobs, add uuids

--- a/rundeck-project/jobs/InstallDeb.yaml
+++ b/rundeck-project/jobs/InstallDeb.yaml
@@ -1,4 +1,7 @@
 - name: InstallDeb
+  uuid: InstallDeb
+  group: Install Package
+  defaultTab: output
   nodefilters:
     filter: web_.*
   sequence:
