--- a/rundeck-project/jobs/RotateDbCredentials.yaml
+++ b/rundeck-project/jobs/RotateDbCredentials.yaml
@@ -1,5 +1,6 @@
 - name: RotateDbCredentials
   uuid: RotateDbCredentials
+  group: DB Credential Rotation
   options:
   - label: master_user_version
     name: master_user_version
