--- a/rundeck-project/jobs/HelloWorld.yaml
+++ b/rundeck-project/jobs/HelloWorld.yaml
@@ -1,5 +1,7 @@
 - name: HelloWorld
+  uuid: HelloWorld
   description: 'A job to test our hello world plugin'
+  group: Hello World
   nodefilters:
     filter: web_.*
   sequence:
