Updated rundeck to use version instead of commit

--- a/rundeck-cli/Dockerfile
+++ b/rundeck-cli/Dockerfile
@@ -1,11 +1,8 @@
 FROM openjdk:8-jdk
 COPY --from=gradle:jdk8 /opt/gradle /opt/gradle
 RUN ln -s /opt/gradle/bin/gradle /usr/bin/gradle
-ARG COMMIT
-RUN mkdir /root/rd && curl -sL https://github.com/rundeck/rundeck-cli/archive/${COMMIT}.zip > /root/rd/rd.zip
+ARG VERSION
+RUN mkdir /root/rd && curl -sL https://github.com/rundeck/rundeck-cli/releases/download/v${VERSION}/rd-${VERSION}.zip > /root/rd/rd.zip
 RUN cd /root/rd/ \
     && unzip rd.zip \
-    && cd rundeck-cli-${COMMIT} \
-    && gradle --no-daemon :distZip
-RUN unzip -d /root/tools /root/rd/rundeck-cli-${COMMIT}/build/distributions/rd-0.1.0-SNAPSHOT.zip \
-    && rm -rf /root/rd
+    && mv rd-${VERSION}/bin/rd /usr/local/openjdk-8/bin
