--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build:
       context: rundeck-cli
       args:
-        COMMIT: f20b69dc8e43462bf71a78dcb549997c86a51995
+        VERSION: "1.3.10"
     image: playground-rundeck-cli
   
   # plugin bootstrap tool
