Change COMMIT to VERSION

--- a/rundeck-plugin-bootstrap/Dockerfile
+++ b/rundeck-plugin-bootstrap/Dockerfile
@@ -1,12 +1,8 @@
 FROM openjdk:8-jdk
 COPY --from=gradle:jdk8 /opt/gradle /opt/gradle
 RUN ln -s /opt/gradle/bin/gradle /usr/bin/gradle
-ARG COMMIT
-RUN mkdir /root/plugin-bootstrap && curl -sL https://github.com/rundeck/plugin-bootstrap/archive/${COMMIT}.zip > /root/plugin-bootstrap/plugin-bootstrap.zip
+ARG VERSION
+RUN mkdir /root/plugin-bootstrap && wget https://github.com/rundeck/plugin-bootstrap/releases/download/${VERSION}/rundeck-plugin-bootstrap-${VERSION}.zip -P /root/plugin-bootstrap
 RUN cd /root/plugin-bootstrap \
-    && unzip plugin-bootstrap.zip \
-    && rm plugin-bootstrap.zip \
-    && cd plugin-bootstrap-${COMMIT} \
-    && gradle --no-daemon build :distZip
-RUN unzip -d /root/tools/ /root/plugin-bootstrap/plugin-bootstrap-${COMMIT}/build/distributions/rundeck-plugin-bootstrap-0.1.0-SNAPSHOT.zip \
-    && rm -rf /root/plugin-bootstrap
+    && unzip rundeck-plugin-bootstrap-${VERSION}.zip \
+    && mv rundeck-plugin-bootstrap-${VERSION}/bin/rundeck-plugin-bootstrap /usr/local/openjdk-8/bin
